# finally

./: README.md
.claude/: settings.json
backend/: pyproject.toml
backend/app/market_data/: __init__.py  cache.py  factory.py  interface.py  massive.py  simulator.py
backend/src/: main.py
backend/src/market/: __init__.py  cache.py  factory.py  interface.py  massive.py  models.py  simulator.py  simulator_engine.py  sse.py
backend/tests/: test_cache.py  test_factory.py  test_interface.py  test_massive.py  test_simulator.py  test_simulator_engine.py  test_sse.py
independent-reviewer/.claude-plugin/: marketplace.json
independent-reviewer/hooks/: hooks.json
planning/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  REVIEW.md
